# AI-Research-Assistant

./: .env.example  README.md  pyproject.toml
output/: evaluation_results.json  paper_20260612_122157.tex
src/: api.py  app.py  config.py  evaluation.py  graph.py  test_eval.py  test_model.py
src/tools/: arxiv_tool.py  read_pdf.py  semantic_scholar_tool.py  vector_store.py  write_pdf.py
